tests/should_fail/match_on_non_enum.nv
module main

// SHOULD FAIL: match on a non-custom-type (Int) with a specific variant name
// The parser checks custom_to_string() and errors when it's None on a specific (non-_) arm
fn test(x: Int) {
    match x {
        SomeVariant => { println("variant") }
    }
}
test(5)
